2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15386: [Caching framework] Remove needless constant in cache manager
	* Fixed bug #14971: Unit test for sanitizeLocalUrl fails on installations inside a subdirectory (thanks to Stefan Galinski & Pascal Jungblut)

2010-08-06  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.2

2010-08-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15355: htmlArea RTE: Using the advanded frontend editing, the editor is not loaded in the text tab

2010-08-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #12646: Click on icon does not open/close sections

2010-08-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #14773: Styling issue when selecting position of new created page

2010-08-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15343: dbClientCompress crashes with pconnect
	* Fixed bug #15280: felogin redirect doesn't work anymore after update to latest releases (4.2x - 4.4.x) (thanks to Helmut Hummel)
	* Fixed bug #15282: It is impossible to set links to files any more with the link wizard
	* Fixed bug #15336: sys_actions shows wrong error if an "Record List" action is not propertly configured (thanks to Stefan Galinski)

2010-08-03  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15313: Link to deprecation logfile doesn't work in installations inside a subdirectory (thanks to Stefan Galinski)

2010-08-03  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15265: InstallTool-login not possible after Update to 4.4.1 due to session_start() in extensions (thanks to Ernesto Baschny and Helmut Hummel)

2010-08-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15289: Element-Browser page tree has HSC'ed <span> elements

2010-08-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15321: Unused variable $warningItems in tx_install (thanks to Markus Klein)

2010-08-01  Susanne Moog  <typo3@susanne-moog.de>
